# mibanco-hackaton

./: .gitignore  pyproject.toml  read_msg.py
project/: .dockerignore  .gcloudignore  DEPLOY.md  Dockerfile  ESTADO_PROYECTO.md  GCLOUD_CUENTAS.md  Progreso_IA_Biblioteca_Ejemplos.docx  README.md  deploy.sh  mockup_validacion (2).html  prompt_claude_code.md
project/backend/: agents.py  criterios.py  main.py  msg_import.py  requirements.txt  service.py  storage.py  store.py
project/backend/seed_data/: correo_shirley.html  preview_shirley.json
project/data/: Test_SHIRLEY_Ingresa_a_la_App_Mibanco_solo_con_tu_tarjeta_de_débito_gmail.html  correo.html
project/frontend/: index.html  package-lock.json  package.json  vite.config.js
project/frontend/.backup_pre_rediseno/: App.jsx  index.html  styles.css
project/frontend/src/: App.jsx  api.js  styles.css
reto2_insights/: EDA_Clientes.html  EDA_Clientes.ipynb  RESUMEN_EJECUTIVO.md  eda_clientes.py
reto2_insights/eda_outputs/: segmentos_resumen.csv
