[project]
name = "hackaton-mibanco"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "extract-msg>=0.55.0",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
]
